lbdb (0.19.6) unstable; urgency=low

  * New version of m_pine by Gabor Fleischer <flocsy@mtesz.hu>: Now
    handles aliases without real names correct (by using a single space as
    the realname, so Mutt has not problem with this.

 --

lbdb (0.19.5) unstable; urgency=low

  * Remove "-f" option from configure @AWK@ variable and manually add it,
    where it is needed, otherwise @AWK@ cannot be used for inline scripts.
  * Add new module m_pine, provided by Gabor FLEISCHER <flocsy@mtesz.hu>
    to search pine address books.
  * Fixed m_muttalias to additionally accept "foo@bar (Foo Bar)" style
    addresses and to ignore group aliases.

 -- Roland Rosenfeld <roland@debian.org>  Fri, 23 Jun 2000 12:09:32 +0200

lbdb (0.19.4) unstable; urgency=low

  * Make dotlock.c compile on systems without snprintf() again.
  * Don't remove Makefile in clean target but only in distclean.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 28 May 2000 11:32:16 +0200

lbdb (0.19.3) unstable; urgency=low

  * Add new module m_muttalias, provided by Brian Salter-Duke
    <b_duke@lacebark.ntu.edu.au> to search mutt alias files for aliases.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 27 May 2000 14:47:17 +0200

lbdb (0.19.2) unstable; urgency=low

  * Give the dateformat to fetchaddr(1) using the -d option (instead of
    simply using argv[1]).
  * Give the dateformat to lbdb-fetchaddr(1) using the -d option.  If
    there is only one parameter, this is used as dateformat for backward
    compatibility.  Manpage adapted to this.
  * Remove DOTLOCK=/usr/bin/mutt_dotlock from ./configure environment.
    This is superfluous since --enable-lbdb-dotlock is used, but it
    doesn't cause problems (neither with mutt installed or deinstalled)
    (Closes: #64134).
  * Fixed typo in m_abook ("@$" instead of "$@").

 -- Roland Rosenfeld <roland@debian.org>  Mon, 22 May 2000 10:59:59 +0200

lbdb (0.19.1) unstable; urgency=low

  * Correct dependencies: