@@ -6,6 +6,16 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# This is the debhelper compatibility version to use.
+export DH_COMPAT=2
+
+DROOT=`pwd`/debian/bsmtpd
+
+DEBUGSYMS=
+ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
+	DEBUGSYMS=-g
+endif
+
 build: build-stamp
 build-stamp:
 	dh_testdir
@@ -16,7 +26,7 @@ build-stamp:
 		./configure --prefix=/usr --libdir='$${prefix}/lib/lbdb' \
 			--mandir='$${prefix}/share/man' --sysconfdir=/etc \
 			--enable-lbdb-dotlock
-	$(MAKE) CFLAGS="-O2 -g -Wall"
+	$(MAKE) CFLAGS="-O2 -Wall $(DEBUGSYMS)"
 
 	touch build-stamp
 
@@ -37,8 +47,7 @@ install-stamp: build-stamp
 	dh_clean -k
 	dh_installdirs
 
-	$(MAKE) prefix=`pwd`/debian/tmp/usr sysconfdir=`pwd`/debian/tmp/etc \
-		install
+	$(MAKE) prefix=$(DROOT)/usr sysconfdir=$(DROOT)/etc install
 
 	touch install-stamp
 
@@ -48,31 +57,36 @@ binary-indep: build install
 
 # Build architecture-dependent files here.
 binary-arch: build install
-#	dh_testversion
+	dh_testversion 2
 	dh_testdir
 	dh_testroot
+#	dh_installdebconf	
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
+	dh_installlogrotate
 #	dh_installemacsen
+#	dh_installpam
+#	dh_installmime
 #	dh_installinit
 	dh_installcron
 	dh_installmanpages
 #	dh_undocumented
-	dh_installchangelogs 
+	dh_installchangelogs
+	dh_link
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	dh_strip
+endif
 	dh_compress
 	dh_fixperms
 	dh_suidregister
+#	dh_makeshlibs
 	dh_installdeb
+#	dh_perl
 	dh_shlibdeps
 	dh_gencontrol
-#	dh_makeshlibs
 	dh_md5sums
 	dh_builddeb
-
-source diff:                                                                  
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
